--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "bootstrap": "~3.3.1",
     "angular": "~1.3.4",
     "angular-resource": "~1.3.4",
-    "angular-route": "~1.3.4"
+    "angular-route": "~1.3.4",
+    "font-awesome": "~4.2.0"
   }
 }
