--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "~1.3.4",
     "angular-resource": "~1.3.4",
     "angular-route": "~1.3.4",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "d3": "~3.4.13"
   }
 }
