--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "angular-resource": "~1.3.4",
     "angular-route": "~1.3.4",
     "font-awesome": "~4.2.0",
-    "d3": "~3.4.13"
+    "d3": "~3.4.13",
+    "angular-selectize2": "~0.6.2"
   }
 }
