--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,17 @@
 {
-	"name": "tapor",
+  "name": "tapor",
   "version": "3.0.0",
   "dependencies": {
     "bootstrap": "~3.3.1",
-    "angular": "~1.3.4",
+    "angular": "~1.3.8",
     "angular-resource": "~1.3.4",
     "angular-route": "~1.3.4",
     "font-awesome": "~4.2.0",
     "d3": "~3.4.13",
     "angular-selectize2": "~1.1.2",
-    "ng-sortable": "~1.1.9"
-  }
+    "ng-sortable": "~1.1.9",
+    "angular-ui-ace": "~0.2.3",
+    "angular-ui-tinymce": "~0.0.5",
+    "bootstrap-toggle": "~2.2.0"
+  } 
 }
