--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "ng-sortable": "~1.1.9",
     "angular-ui-ace": "~0.2.3",
     "angular-ui-tinymce": "~0.0.5",
-    "bootstrap-toggle": "~2.2.0"
+    "bootstrap-toggle": "~2.2.0",
+    "ui.bootstrap": "~0.12.1",
+    "angular-jqcloud": "~1.0.1"
   } 
 }
