--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
   "version": "3.0.0",
   "dependencies": {
     "bootstrap": "~3.3.1",
-    "angular": "~1.3.8",
-    "angular-resource": "~1.3.4",
-    "angular-route": "~1.3.4",
+    "angular": "~1.4.3",
+    "angular-resource": "~1.4.3",
+    "angular-route": "~1.4.3",
     "font-awesome": "~4.2.0",
     "d3": "~3.4.13",
     "angular-selectize2": "~1.1.2",
@@ -15,5 +15,8 @@
     "bootstrap-toggle": "~2.2.0",
     "ui.bootstrap": "~0.12.1",
     "angular-jqcloud": "~1.0.1"
-  } 
+  },
+  "resolutions": {
+    "angular": "~1.4.3"
+  }
 }
