--- a/config/xapian_db.yml
+++ b/config/xapian_db.yml
@@ -12,9 +12,16 @@ test:
   database: ":memory:"
   <<: *defaults
 
+
 production:
-  # Make sure the beanstalk daemon and the beanstalk worker are running
-  database: db/xapian_db/production
-  # writer:   beanstalk
-  # beanstalk_daemon: localhost:11300
+  database:     db/xapian_db/production
+  writer:       resque
+  resque_queue: my_queue
   <<: *defaults
+
+# production:
+#   # Make sure the beanstalk daemon and the beanstalk worker are running
+#   database: db/xapian_db/production
+#   # writer:   beanstalk
+#   # beanstalk_daemon: localhost:11300
+#   <<: *defaults
