--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,6 @@
 public/images/tools/2*
 config/application.yml
 config/database.yml
-tapor3.sublime-workspace
+/*.sublime-workspace
 db/xapian_db/*
+public/assets
