Fixes #62 Fixes #50 Fixes #10

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ config/database.yml
 /*.sublime-workspace
 db/xapian_db/*
 public/assets/*
+!public/assets/themes
+!public/assets/plugins
+!public/assets/skins
