--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "bootstrap-toggle": "~2.2.0",
     "ui.bootstrap": "~0.12.1",
     "angular-jqcloud": "~1.0.1",
-    "d3": "^4.7.4"
+    "d3": "^4.7.4",
+    "d3-scale-chromatic": "^1.1.1"
   },
   "resolutions": {
     "angular": "~1.4.3"
